# ibkr-to-irpf

./: .gitignore  README.md  build_lambda.sh  pyproject.toml  requirements-lambda.txt
.github/workflows/: deploy.yml
deployment/: build_lambda.sh
src/: calculator.py  main.py  models.py  parser.py  ptax.py  tests.py
src/static/: style.css
src/templates/: index.html  results.html
