[project]
name = "ibkr-to-irpf"
version = "0.1.0"
description = "A minimalist tool to process Interactive Brokers (IBKR) statements for Brazilian Income Tax (IRPF) purposes ðŸ¦"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "python-bcb>=0.1.8",
    "mangum>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest]
python_files = ["tests.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FURB", # refurb
    "I",    # isort
    "PTH",  # flake8-use-pathlib
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
